# OmniaX

./: .gitignore  CMakeLists.txt  OXD Data Structure  README.md  TODO  changelog.txt  compile  compile.bat
Temporary/: Animator.hpp  TestApp1.cpp  TestApp2.cpp  TestApp2.hpp  TestApp3.cpp  TestApp3.hpp  baseShader3.shad  particle.xcf  terrain.xcf
Temporary/shaders/: baseShader2.shad  lightShader.shad
extra/: make_and_run  nv_omniax-test
extra/res/shaders/: baseShader.shad  baseShader2.shad  baseShader3.shad  screenShader.shad
src/: TestApp.cpp  TestApp.hpp  TestApp0.cpp  TestApp0.hpp  main.cpp
src/-PY_todo_view/: MyWindow.py  TODO_View.py  untitled.ui
src/omniax/: OmniaX.hpp  Runtime.hpp
src/omniax/core/: DataStructures.hpp  Errors.cpp  Errors.hpp  GLBuffers.cpp  GLBuffers.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Lighting.cpp  Lighting.hpp  OrthoCamera.cpp  OrthoCamera.hpp  Particles.cpp  Particles.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/omniax/graphics/: Animator.hpp  BitmapFont.cpp  BitmapFont.hpp  Color.cpp  Color.hpp  RichString.cpp  RichString.hpp  Texture.cpp  Texture.hpp  TileAnimation.cpp  TileAnimation.hpp
src/omniax/physics/: PhysicsObject.cpp  PhysicsObject.hpp
src/omniax/runtime/: Application.cpp  Application.hpp  Events.hpp  RTData.hpp  Signals.cpp  Signals.hpp
src/omniax/static_resources/: default_bitmap_font.hpp  default_icon_64.hpp  default_light_texture.hpp  default_shaders.hpp
src/omniax/utils/: BaseObject.cpp  BaseObject.hpp  Bitfields.hpp  DataFile.cpp  DataFile.hpp  Defines.hpp  Geometry.cpp  Geometry.hpp  Logger.cpp  Logger.hpp  OutputHandlers.cpp  PathFinder.cpp  PathFinder.hpp  QuadTree.cpp  QuadTree.hpp  Random.cpp  Random.hpp  Serial.cpp  Serial.hpp  SineWave.cpp  SineWave.hpp  Spline.cpp  Spline.hpp  StringEditor.cpp  Types.hpp  Utils.cpp  Utils.hpp
tools/: CppResourceMaker  create_includes.py  inc_bnr  todo-view
